Mengubah nama user_name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
 
     <!-- User Ptofile -->
     <string name="user_full_name">Dwi Azi Prasetya</string>
-    <string name="user_name">Wizi</string>
+    <string name="user_name">Azi</string>
     <string name="user_email">dwiaziprasetya456@gmail.com</string>
     <string name="user_games">145</string>
     <string name="user_friends">3K</string>
